# just-dl

./: CMakeLists.txt  README.md
just-dl/: CMakeLists.txt
just-dl/include/just_dl/: just_dl.hpp
just-dl/src/: just_dl.cpp
just_dl/: CMakeLists.txt
just_dl/include/just_dl/: just_dl.hpp
just_dl/include/just_dl/details/: error.hpp  flags.hpp  function.hpp  interface.hpp  make_error.hpp  open_mode.hpp  version.hpp
just_dl/src/: just_dl.cpp
just_dl/src/details/: error.cpp  make_error.cpp
just_dl/src/platform/: linux_dl.cpp  windows_dl.cpp
tests/: CMakeLists.txt
tests/linux/: CMakeLists.txt  main.cpp
tests/windows/: main.cpp
